# cmaketest

./: CMakeLists.txt  README.md
src/: hello.cpp  hello.h
test/: catch.hpp  hello_test.cpp
tool/: main.cpp
